Chapter 3 : Caching, Logging, and the Spark UI

--- a/Python/Introduction to Spark SQL in Python/takeaways.ipynb
+++ b/Python/Introduction to Spark SQL in Python/takeaways.ipynb
@@ -23,51 +23,42 @@
     "spark_df = spark.createDataFrame(RDD, schema=colname_list)\n",
     "# Loading file (folder name will make the spark load all files in that folder in parallel mode)\n",
     "df = spark.read.csv(\"file.csv\", header=True, inferSchema=True) # .json, .txt, .load for parquet\n",
-    "df.show(3)\n",
+    "df.show(3) # Show first 3 rows\n",
     "df.printSchema() # See schema information\n",
     "result.columns # See result table columns\n",
-    "df.describe().show() # Summary stats\n",
-    "df.createOrReplaceTempView(\"table_name\") # Register DataFrame as a temporary view\n",
-    "result = spark.sql(\"SELECT * FROM table_name\") # Run query on table\n",
-    "spark_df = spark.table(\"table_name\") # start using a spark table as spark dataframe\n",
-    "# Add a new result column\n",
-    "df = df.withColumn(\"new_col\",df.old_col+10)\n",
-    "# Selecting column\n",
-    "df = df.select(df.col1, df.col2, df.col3) # way1\n",
-    "df.select(df.col1, df.col2) # way2\n",
-    "from pyspark.sql.functions import col # way3\n",
-    "df.select(col('col1'), col('col2'))\n",
-    "calculated_col = (df.col1/(df.col2/60)).alias(\"another_col\")\n",
-    "df = df.select(\"col1\", \"col2\", \"col3\", calculated_col)\n",
-    "df = df.selectExpr(\"col1\", \"col2\", \"col3\", \"col1/(col2/60) as another_col\")\n",
-    "df = df.select(col('col1').alias('col1_renamed'), 'col2')\n",
-    "# Filtering (Both produces same results)\n",
-    "df.filter(\"col_name > 120\").show()\n",
-    "df.filter(df.col_name > 120).show()\n",
-    "# Chaining filters\n",
-    "filterA = df.col1 == \"SEA\"\n",
-    "filterB = df.col2 == \"PDX\"\n",
-    "result = temp.filter(filterA).filter(filterB)\n",
-    "df = df.withColumn(\"idx\", monotonically_increasing_id()) # Creating id column\n",
-    "df.groupBy(\"col_name\").count().show() # Group by and count\n",
-    "df.orderBy(\"col_name\").show(3) # order by and count\n",
-    "# Aggregation\n",
-    "df.filter(df.col == 'value').groupBy().max(\"another_col\").show()\n",
     "df = df.na.drop(subset=[\"col_name\"]) # Drop nulls\n",
     "df = df.dropDuplicates() # Drop duplicates\n",
-    "# Rename column\n",
-    "df = df.withColumnRenamed(\"old_col_name\", \"new_col_name\")\n",
+    "df = df.withColumn(\"col_name\", col(\"col_name\").cast(\"float\"))  # Way 1 : Casting a column to another data type\n",
+    "df = df.withColumn(\"col_name\", df.col_name.cast(\"float\")) # Way 2 : Casting a column to another data type\n",
+    "df.describe().show() # Summary stats\n",
+    "df = df.repartition(4, 'some_col') # create 4 partitions using same column values of specified column\n",
+    "print(df.rdd.getNumPartitions()) # See no of partitions of the dataset\n",
     "\n",
-    "# Casting / Converting column type\n",
-    "from pyspark.sql.functions import col\n",
-    "df = df.withColumn(\"col_name\", col(\"col_name\").cast(\"float\"))\n",
-    "df = df.withColumn(\"col_name\", df.col_name.cast(\"float\"))\n",
-    "# Repartitioning based on similar values on a column for distributed computing\n",
-    "df = df.repartition(4, 'some_col') # create 4 partitions\n",
-    "print(df.rdd.getNumPartitions())\n",
-    "# SQL with dataframe\n",
-    "df.createOrReplaceTempView(\"table_name\")\n",
-    "df2 = spark.sql(\"SELECT * FROM table_name\")\n",
+    "df = df.select(df.col1, df.col2, df.col3) # way1 : select column from dataframe\n",
+    "df = df.select(\"col1\", \"col2\") # way2 : select column from dataframe\n",
+    "df.select(col('col1'), col('col2')) # way3 : select column from dataframe,  import col from sql.functions\n",
+    "df = df.withColumn(\"new_col\",df.old_col+10) # Add a new result column\n",
+    "df = df.withColumnRenamed(\"old_col_name\", \"new_col_name\") # Rename column\n",
+    "df = df.select(col('col1').alias('col1_renamed'), 'col2')\n",
+    "df = df.selectExpr(\"col1\", \"col2\", \"col3\", \"col1/(col2/60) as another_col\")\n",
+    "df = df.withColumn(\"idx\", monotonically_increasing_id()) # Creating id column\n",
+    "\n",
+    "# Filtering (Both produces same results)\n",
+    "df = df.filter(\"col_name > 120\").show()\n",
+    "df = df.where(\"Value > 120\")\n",
+    "df = df.filter(df.col_name > 120).show()\n",
+    "df = df.where(df.Value > 120)\n",
+    "filterA = df.col1 == \"SEA\"\n",
+    "result = temp.filter(filterA).filter(filterB) # Chaining filters\n",
+    "df.groupBy(\"col_name\").count() # Group by and count\n",
+    "df.orderBy(\"col_name\") # order by \n",
+    "df.filter(df.col == 'value').groupBy().max(\"another_col\") # Multiple chaining aggregation\n",
+    "\n",
+    "df.createOrReplaceTempView(\"table_name\") # Register DataFrame as a temporary talbe in catalog\n",
+    "spark.catalog.listTables() # See all table information in the catalog\n",
+    "spark.catalog.dropTempView('table_name') # Remove temp table from catalog\n",
+    "spark_df = spark.table(\"table_name\") # start using a spark table as spark dataframe\n",
+    "result = spark.sql(\"SELECT * FROM table_name\") # Run query on table\n",
     "result = df2.collect() # Dataframe as list of rows tha you can iterate over\n",
     "\n",
     "## Visualization : Pyspark_dist_explore, pandas (NOT RECOMMENDED), HandySpark(RECOMMENDED)\n",
@@ -215,11 +206,128 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Caching, Logging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- caching is lazy operation\n",
+    "- Only cache when necessary (multiple Operation requires the dataframe or table)\n",
+    "- Least Recently Used (LRU) as eviction policy\n",
+    "- Eviction happens independently on each worker\n",
+    "- uncache when it is no longer needed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Caching dataframe\n",
+    "df.persist(storageLevel=pyspark.StorageLevel.MEMORY_AND_DISK) # cache a fataframe\n",
+    "df.cache() # Alternative : cache a fataframe\n",
+    "df.is_cached # Check if the dataframe is cached\n",
+    "df.storageLevel # How the dataframe is cached (useDisk, useMemory, useOffHeap, deserialized, replication)\n",
+    "df.unpersist() # uncache a fataframe\n",
+    "# Caching table\n",
+    "df.createOrReplaceTempView('df') # Register dataframe as table\n",
+    "spark.catalog.cacheTable('df') # Cache the table\n",
+    "spark.catalog.isCached(tableName='df') # Check if the table is cached\n",
+    "spark.catalog.uncacheTable('df') # Uncache table\n",
+    "spark.catalog.clearCache() # Clear all cache\n",
+    "\n",
+    "# Visualize cache operations, query plans at >>>>>> localhost:4040\n",
+    "\n",
+    "# Logging for inspecting\n",
+    "import logging\n",
+    "logging.basicConfig(stream=sys.stdout, level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s') # DEBUG, \n",
+    "logging.info(\"Hello %s\", \"world\") # INFO level print\n",
+    "logging.debug(\"Hello, take %d\", 2) # DEBUG level print\n",
+    "ENABLED = False\n",
+    "t = timer()\n",
+    "logger.info(\"No action here.\")\n",
+    "elapsed1 = t - timer()\n",
+    "if ENABLED: # Managing processor usage leakage\n",
+    "    logger.info(\"df has %d rows.\", df.count())\n",
+    "elapsed2 = t - timer()\n",
+    "\n",
+    "# Log columns of text_df as debug message\n",
+    "logging.deug(\"text_df columns: %s\", df1.columns)\n",
+    "# Log whether table1 is cached as info message\n",
+    "logging.info(\"table1 is cached: %s\", spark.catalog.isCached(tableName=\"table1\"))\n",
+    "# Log first row of text_df as warning message\n",
+    "logging.warning(\"The first row of text_df:\\n %s\", df1.first())\n",
+    "# Log selected columns of text_df as error message\n",
+    "logging.error(\"Selected columns: %s\", df1.select(\"id\", \"word\"))\n",
+    "logging.disable(logging.DEBUG) # Turn off logging\n",
+    "\n",
+    "# Query plan analysis\n",
+    "df.cache()\n",
+    "df.explain() # Analysis on datafrmae (use bottom-up approach)\n",
+    "spark.sql('EXPLAIN SELECT * FROM df').first() # Analysis using sql\n",
+    "\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logging in python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import logging\n",
+    "import sys\n",
+    "\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.INFO)\n",
+    "formatter = logging.Formatter('%(asctime)s | %(levelname)s | %(message)s', \n",
+    "                              '%m-%d-%Y %H:%M:%S')\n",
+    "\n",
+    "stdout_handler = logging.StreamHandler(sys.stdout)\n",
+    "stdout_handler.setLevel(logging.DEBUG)\n",
+    "stdout_handler.setFormatter(formatter)\n",
+    "\n",
+    "file_handler = logging.FileHandler('logs.log')\n",
+    "file_handler.setLevel(logging.DEBUG)\n",
+    "file_handler.setFormatter(formatter)\n",
+    "\n",
+    "logger.addHandler(file_handler)\n",
+    "logger.addHandler(stdout_handler)\n",
+    "\n",
+    "########### Simple way #############\n",
+    "import logging\n",
+    "\n",
+    "logging.basicConfig(filename='test.log', format='%(filename)s: %(message)s',\n",
+    "                    level=logging.DEBUG)\n",
+    "\n",
+    "logging.debug('This is a debug message')\n",
+    "logging.info('This is an info message')\n",
+    "logging.warning('This is a warning message')\n",
+    "logging.error('This is an error message')\n",
+    "logging.critical('This is a critical message')\n",
+    "\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
