--- a/Python/Introduction to Spark SQL in Python/takeaways.ipynb
+++ b/Python/Introduction to Spark SQL in Python/takeaways.ipynb
@@ -24,9 +24,13 @@
     "# Loading file (folder name will make the spark load all files in that folder in parallel mode)\n",
     "df = spark.read.csv(\"file.csv\", header=True, inferSchema=True) # .json, .txt, .load for parquet\n",
     "df.show(3) # Show first 3 rows\n",
+    "df.collect() # Store result as list of tuples\n",
+    "df.limit(3) # Same as show\n",
+    "df.dtypes # See datatype of each column\n",
     "df.printSchema() # See schema information\n",
     "result.columns # See result table columns\n",
     "df = df.na.drop(subset=[\"col_name\"]) # Drop nulls\n",
+    "df = df.drop(subset=[\"col_name\"]) # Drop column\n",
     "df = df.dropDuplicates() # Drop duplicates\n",
     "df = df.withColumn(\"col_name\", col(\"col_name\").cast(\"float\"))  # Way 1 : Casting a column to another data type\n",
     "df = df.withColumn(\"col_name\", df.col_name.cast(\"float\")) # Way 2 : Casting a column to another data type\n",
@@ -42,6 +46,12 @@
     "df = df.select(col('col1').alias('col1_renamed'), 'col2')\n",
     "df = df.selectExpr(\"col1\", \"col2\", \"col3\", \"col1/(col2/60) as another_col\")\n",
     "df = df.withColumn(\"idx\", monotonically_increasing_id()) # Creating id column\n",
+    "df.where(array_contains('col', 'abc')) # Check if an element is inside an array\n",
+    "df1 = df1.withColumn(\"source\", lit(\"df1\")) # Adding constants in a column\n",
+    "\n",
+    "df_vertical = df1.union(df2) # Vertical join (append rows vertically)\n",
+    "df_horizontal = df1.join(df1, on=['common_col1', 'common_col2'], how=\"left\") (append columns horizontally with join)\n",
+    "df_cross = df1.crossJoin(df2) # Cross Join (Horizontally appending columns of possible combinations)\n",
     "\n",
     "# Filtering (Both produces same results)\n",
     "df = df.filter(\"col_name > 120\").show()\n",
@@ -59,13 +69,24 @@
     "spark.catalog.dropTempView('table_name') # Remove temp table from catalog\n",
     "spark_df = spark.table(\"table_name\") # start using a spark table as spark dataframe\n",
     "result = spark.sql(\"SELECT * FROM table_name\") # Run query on table\n",
-    "result = df2.collect() # Dataframe as list of rows tha you can iterate over\n",
+    "\n",
+    "# Using Custom function to double the value of a column\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import IntegerType\n",
+    "def double_val(col):\n",
+    "    return col * 2 # Make sure any new data is casted to proper type\n",
+    "double_val_udf = udf(double_val, IntegerType()) # Register UDF with custom function and return type\n",
+    "df = df.withColumn(\"DoubledCol\", double_val_udf(df[\"col\"]))\n",
     "\n",
     "## Visualization : Pyspark_dist_explore, pandas (NOT RECOMMENDED), HandySpark(RECOMMENDED)\n",
     "pandas_df = spark_df.toPandas()\n",
     "handy_df = spark_df.toHandy() # Convert to handyspark dataframe\n",
     "handy_df.cols[\"col_name\"].hist()\n",
     "spark_df = handy_df.to_spark() # Convert to pyspark dataframe\n",
+    "\n",
+    "## NOTE\n",
+    "# Array: [1.0, 0.0, 0.0, 3.0]\n",
+    "# Sparse vector: (4, [0, 3], [1.0, 3.0])\n",
     "```"
    ]
   },
@@ -279,6 +300,7 @@
     "spark.sql('EXPLAIN SELECT * FROM df').first() # Analysis using sql\n",
     "\n",
     "\n",
+    "\n",
     "```"
    ]
   },
@@ -326,6 +348,84 @@
     "logging.critical('This is a critical message')\n",
     "\n",
     "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sparse data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from pyspark.ml.linalg import DenseVector, SparseVector, Vectors\n",
+    "\n",
+    "# Given you have \"spark\" session and \"dense_array\" column\n",
+    "\n",
+    "########### DENSE TO SPARSE #############\n",
+    "from pyspark.ml.linalg import Vectors\n",
+    "def dense_to_sparse(dense_array):\n",
+    "    return Vectors.dense(dense_array).toSparse()\n",
+    "\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import ArrayType, DoubleType\n",
+    "dense_to_sparse_udf = udf(dense_to_sparse, ArrayType(DoubleType()))\n",
+    "sparse_df = dense_df.withColumn(\"sparse_array\", dense_to_sparse_udf(\"dense_array\"))\n",
+    "\n",
+    "########### SPARSE TO DENSE  #############\n",
+    "from pyspark.ml.linalg import Vectors\n",
+    "\n",
+    "def sparse_to_dense(sparse_array):\n",
+    "    return Vectors.sparse(len(sparse_array), [i for i, v in enumerate(sparse_array) if v != 0], \n",
+    "                          [v for v in sparse_array if v != 0]).toArray()\n",
+    "\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import ArrayType, DoubleType\n",
+    "sparse_to_dense_udf = udf(sparse_to_dense, ArrayType(DoubleType()))\n",
+    "dense_df = sparse_df.withColumn(\"dense_array\", sparse_to_dense_udf(\"sparse_array\"))\n",
+    "\n",
+    "############## FOR TEXT DATA ###################\n",
+    "\n",
+    "from pyspark.ml.feature import CountVectorizer\n",
+    "vectorizer = CountVectorizer(inputCol=\"text_col\", outputCol=\"features\")\n",
+    "vectorizer_model = vectorizer.fit(text_df)\n",
+    "sparse_df = vectorizer_model.transform(text_df)\n",
+    "\n",
+    "# Convert sparse vector column to array\n",
+    "def sparse_to_array(sparse_vector):\n",
+    "    return sparse_vector.toArray().tolist()\n",
+    "\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import ArrayType, DoubleType\n",
+    "sparse_to_array_udf = udf(sparse_to_array, ArrayType(DoubleType()))\n",
+    "array_df = sparse_df.withColumn(\"array_features\", sparse_to_array_udf(\"features\"))\n",
+    "\n",
+    "### Checking if sparse array is empty\n",
+    "def is_sparse_array_empty(sparse_array):\n",
+    "    return sparse_array.numNonzeros() == 0\n",
+    "\n",
+    "is_sparse_array_empty_udf = udf(is_sparse_array_empty, BooleanType())\n",
+    "df_with_boolean = df.withColumn(\"is_empty\", is_sparse_array_empty_udf(\"sparse_col\"))\n",
+    "\n",
+    "### Using machine learning\n",
+    "train_data, test_data = df.randomSplit([0.7, 0.3], seed=123)\n",
+    "lr = LogisticRegression(featuresCol=\"features\", labelCol=\"label\")\n",
+    "lr_model = lr.fit(train_data)\n",
+    "predictions = lr_model.transform(test_data)\n",
+    "evaluator = BinaryClassificationEvaluator(labelCol=\"label\", metricName=\"areaUnderROC\")\n",
+    "roc_auc = evaluator.evaluate(predictions) # lr_model.evaluate(test_data)\n",
     "```"
    ]
   }
