Chapter 2 : Manipulating DataFrames in the real world

--- a/Python/Cleaning Data with PySpark/takeaways.ipynb
+++ b/Python/Cleaning Data with PySpark/takeaways.ipynb
@@ -22,12 +22,14 @@
     "df.dtypes # See datatype of each column\n",
     "df.printSchema() # See schema information\n",
     "result.columns # See result table columns\n",
+    "df.filter(~ col('col').isNull()) # Check for nulls\n",
     "df = df.na.drop(subset=[\"col_name\"]) # Drop nulls\n",
     "df = df.drop(subset=[\"col_name\"]) # Drop column\n",
     "df = df.dropDuplicates() # Drop duplicates\n",
     "df = df.withColumn(\"col_name\", col(\"col_name\").cast(\"float\"))  # Way 1 : Casting a column to another data type\n",
     "df = df.withColumn(\"col_name\", df.col_name.cast(\"float\")) # Way 2 : Casting a column to another data type\n",
     "df.describe().show() # Summary stats\n",
+    "df.agg({'col_name':'max'}).first()[0] # Maximum value of a column\n",
     "df = df.repartition(4, 'some_col') # create 4 partitions using same column values of specified column\n",
     "print(df.rdd.getNumPartitions()) # See no of partitions of the dataset\n",
     "\n",
