--- a/Python/Cleaning Data with PySpark/takeaways.ipynb
+++ b/Python/Cleaning Data with PySpark/takeaways.ipynb
@@ -13,7 +13,7 @@
     "dataSchema = StructType([ StructField('col1', StringType(), , nullable=True),\n",
     "                            StructField('col2', StringType(), , nullable=False)])\n",
     "df = spark.read.csv(\"file.csv\", header=True, schema=dataSchema) # .json, .txt, .load for parquet\n",
-    "df = spark.read.format('csv').options(Header=True).load(name='filename.csv', inferSchema=True) # schema=dataSchema\n",
+    "df = spark.read.format('csv').options(Header=True).load(name='filename.csv') # schema=dataSchema\n",
     "df.write.parquet('filename.parquet', mode='overwrite') # Save file (parquet is more efficient, binary format for big data)\n",
     "df.write.format('parquet').save('filename.parquet')\n",
     "df.show(3) # Show first 3 rows\n",
@@ -32,6 +32,7 @@
     "df.agg({'col_name':'max'}).first()[0] # Maximum value of a column\n",
     "df = df.repartition(4, 'some_col') # create 4 partitions using same column values of specified column\n",
     "print(df.rdd.getNumPartitions()) # See no of partitions of the dataset\n",
+    "df = df.coalesce(num_partitions) # Reduce the number of partitions = reduce shuffling (distribution of data to the nodes)\n",
     "\n",
     "df = df.select(df.col1, df.col2, df.col3) # way1 : select column from dataframe\n",
     "df = df.select(\"col1\", \"col2\") # way2 : select column from dataframe\n",
@@ -46,6 +47,8 @@
     "\n",
     "df_vertical = df1.union(df2) # Vertical join (append rows vertically)\n",
     "df_horizontal = df1.join(df1, on=['common_col1', 'common_col2'], how=\"left\") (append columns horizontally with join)\n",
+    "joined_df = df1.join(df2, df1[\"colx\"] == df2[\"coly\"] , how=\"inner\") # Alternative way : Join \n",
+    "combined_df = df_1.join(broadcast(df_2)) # Prevents undue / excess communication between nodes by giving a nroadcasted copy to each\n",
     "df_cross = df1.crossJoin(df2) # Cross Join (Horizontally appending columns of possible combinations)\n",
     "\n",
     "# Filtering (Both produces same results)\n",
@@ -84,6 +87,58 @@
     "# Sparse vector: (4, [0, 3], [1.0, 3.0])\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### String to date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import pyspark.sql.functions as F\n",
+    "# Convert from specified string format to date (given the string shows date format in \"MM/dd/yyyy\")\n",
+    "df = df.withColumn(\"DATE_col\", F.to_date(F.col(\"DATE_col\"), \"MM/dd/yyyy\"))\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pyspark configuration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Get information about configuration\n",
+    "app_name = spark.conf.get(\"spark.app.name\")\n",
+    "driver_tcp_port = spark.conf.get(\"spark.driver.port\")\n",
+    "num_partitions = spark.conf.get('spark.sql.shuffle.partitions')\n",
+    "\n",
+    "# Set information about configuration\n",
+    "spark.conf.set('spark.sql.shuffle.partitions', 500)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
