Chapter 4 : Complex processing and data pipelines

--- a/Python/Introduction to Spark SQL in Python/takeaways.ipynb
+++ b/Python/Introduction to Spark SQL in Python/takeaways.ipynb
@@ -298,9 +298,6 @@
     "df.cache()\n",
     "df.explain() # Analysis on datafrmae (use bottom-up approach)\n",
     "spark.sql('EXPLAIN SELECT * FROM df').first() # Analysis using sql\n",
-    "\n",
-    "\n",
-    "\n",
     "```"
    ]
   },
@@ -371,37 +368,38 @@
    "source": [
     "```\n",
     "from pyspark.ml.linalg import DenseVector, SparseVector, Vectors\n",
+    "dense_vector = DenseVector([1.0, 0.0, 3.0, 0.0, 5.0]) # [1.0,0.0,3.0,0.0,5.0]\n",
+    "sparse_vector = SparseVector(5, [0, 2, 4], [1.0, 3.0, 5.0]) # (size, index, values) representation. Others are 0s\n",
     "\n",
+    "from pyspark.sql.functions import udf\n",
     "# Given you have \"spark\" session and \"dense_array\" column\n",
-    "\n",
     "########### DENSE TO SPARSE #############\n",
-    "from pyspark.ml.linalg import Vectors\n",
     "def dense_to_sparse(dense_array):\n",
     "    return Vectors.dense(dense_array).toSparse()\n",
     "\n",
-    "from pyspark.sql.functions import udf\n",
     "from pyspark.sql.types import ArrayType, DoubleType\n",
     "dense_to_sparse_udf = udf(dense_to_sparse, ArrayType(DoubleType()))\n",
     "sparse_df = dense_df.withColumn(\"sparse_array\", dense_to_sparse_udf(\"dense_array\"))\n",
     "\n",
     "########### SPARSE TO DENSE  #############\n",
-    "from pyspark.ml.linalg import Vectors\n",
-    "\n",
     "def sparse_to_dense(sparse_array):\n",
     "    return Vectors.sparse(len(sparse_array), [i for i, v in enumerate(sparse_array) if v != 0], \n",
     "                          [v for v in sparse_array if v != 0]).toArray()\n",
     "\n",
-    "from pyspark.sql.functions import udf\n",
     "from pyspark.sql.types import ArrayType, DoubleType\n",
     "sparse_to_dense_udf = udf(sparse_to_dense, ArrayType(DoubleType()))\n",
     "dense_df = sparse_df.withColumn(\"dense_array\", sparse_to_dense_udf(\"sparse_array\"))\n",
     "\n",
     "############## FOR TEXT DATA ###################\n",
     "\n",
-    "from pyspark.ml.feature import CountVectorizer\n",
-    "vectorizer = CountVectorizer(inputCol=\"text_col\", outputCol=\"features\")\n",
+    "from pyspark.ml.feature import CountVectorizer, VectorAssembler # Efficient sparse representation for text\n",
+    "vectorizer = CountVectorizer(inputCol=\"text_col\", outputCol=\"features\") \n",
     "vectorizer_model = vectorizer.fit(text_df)\n",
     "sparse_df = vectorizer_model.transform(text_df)\n",
+    "\n",
+    "# Convert sparse vectors to dense vectors\n",
+    "vector_assembler = VectorAssembler(inputCols=[\"features\"], outputCol=\"dense_features\")\n",
+    "dense_df = vector_assembler.transform(sparse_df).select(\"dense_features\")\n",
     "\n",
     "# Convert sparse vector column to array\n",
     "def sparse_to_array(sparse_vector):\n",
