--- a/Python/Cleaning Data with PySpark/takeaways.ipynb
+++ b/Python/Cleaning Data with PySpark/takeaways.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Chapter 1 and 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```\n",
     "# Create dataframe from RDD\n",
     "spark_df = spark.createDataFrame(RDD, schema=colname_list)\n",
@@ -12,7 +19,7 @@
     "from pyspark.sql.types import *\n",
     "dataSchema = StructType([ StructField('col1', StringType(), , nullable=True),\n",
     "                            StructField('col2', StringType(), , nullable=False)])\n",
-    "df = spark.read.csv(\"file.csv\", header=True, schema=dataSchema) # .json, .txt, .load for parquet\n",
+    "df = spark.read.csv(\"file.csv\", header=True, schema=dataSchema, comment='#', sep=',') # .json, .txt, .load for parquet\n",
     "df = spark.read.format('csv').options(Header=True).load(name='filename.csv') # schema=dataSchema\n",
     "df.write.parquet('filename.parquet', mode='overwrite') # Save file (parquet is more efficient, binary format for big data)\n",
     "df.write.format('parquet').save('filename.parquet')\n",
@@ -28,6 +35,8 @@
     "df = df.dropDuplicates() # Drop duplicates\n",
     "df = df.withColumn(\"col_name\", col(\"col_name\").cast(\"float\"))  # Way 1 : Casting a column to another data type\n",
     "df = df.withColumn(\"col_name\", df.col_name.cast(\"float\")) # Way 2 : Casting a column to another data type\n",
+    "from pyspark.sql.types import IntegerType # Remember: ArrayType is homogeneous, use StructType([]) for heterogeneity\n",
+    "df = df.withColumn('casted_col', df['col_name'].cast(IntegerType())) # Way 3 : Casting \n",
     "df.describe().show() # Summary stats\n",
     "df.agg({'col_name':'max'}).first()[0] # Maximum value of a column\n",
     "df = df.repartition(4, 'some_col') # create 4 partitions using same column values of specified column\n",
@@ -68,13 +77,13 @@
     "spark_df = spark.table(\"table_name\") # start using a spark table as spark dataframe\n",
     "result = spark.sql(\"SELECT * FROM table_name\") # Run query on table\n",
     "\n",
-    "# Using Custom function to double the value of a column\n",
+    "# Using PYSPARK CUSTOM FUNCTION\n",
     "from pyspark.sql.functions import udf\n",
     "from pyspark.sql.types import IntegerType\n",
     "def double_val(col):\n",
     "    return col * 2 # Make sure any new data is casted to proper type\n",
     "double_val_udf = udf(double_val, IntegerType()) # Register UDF with custom function and return type\n",
-    "df = df.withColumn(\"DoubledCol\", double_val_udf(df[\"col\"]))\n",
+    "df = df.withColumn(\"DoubledCol\", custom_func(df[\"col\"]))\n",
     "\n",
     "## Visualization : Pyspark_dist_explore, pandas (NOT RECOMMENDED), HandySpark(RECOMMENDED)\n",
     "pandas_df = spark_df.toPandas()\n",
@@ -110,6 +119,8 @@
     "import pyspark.sql.functions as F\n",
     "# Convert from specified string format to date (given the string shows date format in \"MM/dd/yyyy\")\n",
     "df = df.withColumn(\"DATE_col\", F.to_date(F.col(\"DATE_col\"), \"MM/dd/yyyy\"))\n",
+    "# For timestamp\n",
+    "df = df.withColumn(\"DATETIME_col\", F.to_timestamp(F.col(\"DATETIME_col\"), 'yyyy-MM-dd HH:mm:ss').alias('DATETIME_col'))\n",
     "```"
    ]
   },
@@ -138,7 +149,44 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Custom Function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Define the UDF\n",
+    "def dog_parse(dog):\n",
+    "    (breed, start_x, start_y, end_x, end_y) = dog.split(',')\n",
+    "    return (breed, int(start_x), int(start_y), int(end_x), int(end_y))\n",
+    "\n",
+    "udf_dog_parse = udf(dog_parse, \\\n",
+    "                    StructType([\n",
+    "                        StructField(\"breed\", StringType(), True),\n",
+    "                        StructField(\"start_x\", IntegerType(), True),\n",
+    "                        StructField(\"start_y\", IntegerType(), True),\n",
+    "                        StructField(\"end_x\", IntegerType(), True),\n",
+    "                        StructField(\"end_y\", IntegerType(), True)\n",
+    "                    ]))\n",
+    "\n",
+    "# Apply the UDF\n",
+    "df_parsed = df.withColumn(\"parsed_dog_info\", udf_dog_parse(df[\"dog_info\"]))\n",
+    "\n",
+    "# Show the DataFrame\n",
+    "df_parsed.show(truncate=False)\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
