--- a/Python/Feature Engineering with PySpark/takeaways.ipynb
+++ b/Python/Feature Engineering with PySpark/takeaways.ipynb
@@ -95,11 +95,153 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pySpark Dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Create dataframe from RDD\n",
+    "spark_df = spark.createDataFrame(RDD, schema=colname_list)\n",
+    "\n",
+    "# Loading file (folder name will make the spark load all files in that folder in parallel mode)\n",
+    "from pyspark.sql.types import *\n",
+    "dataSchema = StructType([ StructField('col1', StringType(), , nullable=True),\n",
+    "                            StructField('col2', StringType(), , nullable=False)])\n",
+    "df = spark.read.csv(\"file.csv\", header=True, schema=dataSchema, comment='#', sep=',') # .json, .txt, .load for parquet\n",
+    "df = spark.read.format('csv').options(Header=True).load(name='filename.csv') # schema=dataSchema\n",
+    "df.write.parquet('filename.parquet', mode='overwrite') # Save file (parquet is more efficient, binary format for big data)\n",
+    "df.write.format('parquet').save('filename.parquet')\n",
+    "df.show(3) # Show first 3 rows\n",
+    "df.collect() # Store result as list of tuples\n",
+    "df.limit(3) # Same as show\n",
+    "df.dtypes # See datatype of each column\n",
+    "df.printSchema() # See schema information\n",
+    "result.columns # See result table columns\n",
+    "df.filter(~ col('col').isNull()) # Check for nulls\n",
+    "df = df.na.drop(subset=[\"col_name\"]) # Drop nulls\n",
+    "df = df.drop(subset=[\"col_name\"]) # Drop column\n",
+    "df = df.dropDuplicates() # Drop duplicates\n",
+    "df = df.withColumn(\"col_name\", col(\"col_name\").cast(\"float\"))  # Way 1 : Casting a column to another data type\n",
+    "df = df.withColumn(\"col_name\", df.col_name.cast(\"float\")) # Way 2 : Casting a column to another data type\n",
+    "from pyspark.sql.types import IntegerType # Remember: ArrayType is homogeneous, use StructType([]) for heterogeneity\n",
+    "df = df.withColumn('casted_col', df['col_name'].cast(IntegerType())) # Way 3 : Casting \n",
+    "df.describe().show() # Summary stats\n",
+    "df.agg({'col_name':'max'}).first()[0] # Maximum value of a column\n",
+    "df = df.repartition(4, 'some_col') # create 4 partitions using same column values of specified column\n",
+    "print(df.rdd.getNumPartitions()) # See no of partitions of the dataset\n",
+    "df = df.coalesce(num_partitions) # Reduce the number of partitions = reduce shuffling (distribution of data to the nodes)\n",
+    "df_split = df.withColumn(\"DataSplit\", split(df[\"Data\"], \",\")) # Split values and store as list in a column\n",
+    "df_explode = df_split.withColumn(\"ExplodedData\", explode(df_split[\"DataSplit\"])) # Store each element of list in separate rows\n",
+    "df_pivot = df_explode.groupBy(\"Key\").pivot(\"ExplodedData\").count().fillna(0) # pivot count of each element in separate columns \n",
+    "df = df.select(df.col1, df.col2, df.col3) # way1 : select column from dataframe\n",
+    "df = df.select(\"col1\", \"col2\") # way2 : select column from dataframe\n",
+    "df.select(col('col1'), col('col2')) # way3 : select column from dataframe,  import col from sql.functions\n",
+    "df = df.withColumn(\"new_col\",df.old_col+10) # Add a new result column\n",
+    "df = df.withColumnRenamed(\"old_col_name\", \"new_col_name\") # Rename column\n",
+    "df = df.select(col('col1').alias('col1_renamed'), 'col2')\n",
+    "df = df.selectExpr(\"col1\", \"col2\", \"col3\", \"col1/(col2/60) as another_col\")\n",
+    "df = df.withColumn(\"idx\", monotonically_increasing_id()) # Creating id column\n",
+    "df.where(array_contains('col', 'abc')) # Check if an element is inside an array\n",
+    "df1 = df1.withColumn(\"source\", lit(\"df1\")) # Adding constants in a column\n",
+    "\n",
+    "df_vertical = df1.union(df2) # Vertical join (append rows vertically)\n",
+    "df_horizontal = df1.join(df1, on=['common_col1', 'common_col2'], how=\"left\") (append columns horizontally with join)\n",
+    "joined_df = df1.join(df2, df1[\"colx\"] == df2[\"coly\"] , how=\"inner\") # Alternative way : Join \n",
+    "combined_df = df_1.join(broadcast(df_2)) # Prevents undue / excess communication between nodes by giving a nroadcasted copy to each\n",
+    "df_cross = df1.crossJoin(df2) # Cross Join (Horizontally appending columns of possible combinations)\n",
+    "\n",
+    "# Filtering (Both produces same results)\n",
+    "df = df.filter(\"col_name > 120\").show()\n",
+    "df = df.where(\"Value > 120\")\n",
+    "df = df.filter(df.col_name > 120).show()\n",
+    "df = df.where(df.Value > 120)\n",
+    "filterA = df.col1 == \"SEA\"\n",
+    "result = temp.filter(filterA).filter(filterB) # Chaining filters\n",
+    "df.groupBy(\"col_name\").count() # Group by and count\n",
+    "df.orderBy(\"col_name\") # order by \n",
+    "df.filter(df.col == 'value').groupBy().max(\"another_col\") # Multiple chaining aggregation\n",
+    "\n",
+    "df.createOrReplaceTempView(\"table_name\") # Register DataFrame as a temporary talbe in catalog\n",
+    "spark.catalog.listTables() # See all table information in the catalog\n",
+    "spark.catalog.dropTempView('table_name') # Remove temp table from catalog\n",
+    "spark_df = spark.table(\"table_name\") # start using a spark table as spark dataframe\n",
+    "result = spark.sql(\"SELECT * FROM table_name\") # Run query on table\n",
+    "\n",
+    "# Using PYSPARK CUSTOM FUNCTION\n",
+    "from pyspark.sql.functions import udf\n",
+    "from pyspark.sql.types import IntegerType\n",
+    "def double_val(col):\n",
+    "    return col * 2 # Make sure any new data is casted to proper type\n",
+    "double_val_udf = udf(double_val, IntegerType()) # Register UDF with custom function and return type\n",
+    "df = df.withColumn(\"DoubledCol\", custom_func(df[\"col\"]))\n",
+    "\n",
+    "## Visualization : Pyspark_dist_explore, pandas (NOT RECOMMENDED), HandySpark(RECOMMENDED)\n",
+    "pandas_df = spark_df.toPandas()\n",
+    "handy_df = spark_df.toHandy() # Convert to handyspark dataframe\n",
+    "handy_df.cols[\"col_name\"].hist()\n",
+    "spark_df = handy_df.to_spark() # Convert to pyspark dataframe\n",
+    "\n",
+    "## NOTE\n",
+    "# Array: [1.0, 0.0, 0.0, 3.0]\n",
+    "# Sparse vector: (4, [0, 3], [1.0, 3.0])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### PySpark Feature engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Binarizing (create column with value to 0 or 1)\n",
+    "from pyspark.ml.feature import Binarizer\n",
+    "df = df.withColumn('val', df['val'].cast('double'))\n",
+    "bin = Binarizer(threshold=0.0, inputCol='val', outputCol='binary_col')\n",
+    "df = bin.transform(df)\n",
+    "\n",
+    "# Bucketing \n",
+    "from pyspark.ml.feature import Bucketizer\n",
+    "splits = [0, 1, 2, 3, 4, float('Inf')]\n",
+    "# Create bucketing transformer\n",
+    "buck = Bucketizer(splits=splits, inputCol='BATHSTOTAL', outputCol='baths')\n",
+    "# Apply transformer\n",
+    "df = buck.transform(df)\n",
+    "\n",
+    "# One-hot encoding (Can be used with PYSPARK PIPELINE and PYSPARK MACHINE LEARNING model)\n",
+    "from pyspark.ml.feature import StringIndexer, OneHotEncoder, VectorAssembler\n",
+    "string_indexer = StringIndexer(inputCol='cat_col', outputCol='Cat_Index') # Map strings to numbers with string indexer\n",
+    "indexed_df = string_indexer.fit(df).transform(df)\n",
+    "encoder = OneHotEncoder(inputCol='Cat_Index', outputCol='Onehot_feature') # Onehot encode indexed values\n",
+    "encoded_df = encoder.fit(indexed_df).transform(indexed_df)\n",
+    "\n",
+    "# Using Pipeline to do many steps at once\n",
+    "from pyspark.ml import Pipeline\n",
+    "vec_assembler = VectorAssembler(inputCols=[\"feature1\", \"feature2\", \"feature3\", \"Onehot_feature\"], outputCol=\"features\")\n",
+    "pipeline = Pipeline(stages=[string_indexer, encoder, vec_assembler])\n",
+    "pipeline_model = pipeline.fit(df)\n",
+    "transformed_df = pipeline_model.transform(df)\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
