Chapter 4 : Building a Model

--- a/Python/Feature Engineering with PySpark/takeaways.ipynb
+++ b/Python/Feature Engineering with PySpark/takeaways.ipynb
@@ -24,8 +24,11 @@
     "sample_pandas_df = sample_df.toPandas() # Convert to pandas dataframe\n",
     "sns.histplot(sample_pandas_df[numeric_column], kde=True, color='skyblue') # See distribution plot\n",
     "\n",
-    "\n",
-    "\n",
+    "# Visualization : Pyspark_dist_explore, pandas (NOT RECOMMENDED), HandySpark(RECOMMENDED)\n",
+    "pandas_df = spark_df.toPandas()\n",
+    "handy_df = spark_df.toHandy() # Convert to handyspark dataframe\n",
+    "handy_df.cols[\"col_name\"].hist()\n",
+    "spark_df = handy_df.to_spark() # Convert to pyspark dataframe\n",
     "```"
    ]
   },
@@ -235,11 +238,73 @@
     "\n",
     "# Using Pipeline to do many steps at once\n",
     "from pyspark.ml import Pipeline\n",
-    "vec_assembler = VectorAssembler(inputCols=[\"feature1\", \"feature2\", \"feature3\", \"Onehot_feature\"], outputCol=\"features\")\n",
-    "pipeline = Pipeline(stages=[string_indexer, encoder, vec_assembler])\n",
+    "features_cols = list(df.columns) # Check for non-null columns\n",
+    "features_cols.remove('some_null_col') # Remove the dependent variable from the list\n",
+    "df = df.fillna(-1) # Vector Assembler should not take in any nulls\n",
+    "vec_assembler = VectorAssembler(inputCols=[\"feature1\", \"feature2\", \"Onehot_feature\"], outputCol=\"features\") # features_cols\n",
+    "pipeline = Pipeline(stages=[string_indexer, encoder, vec_assembler]) # Last stage is model: eg : stages=[.., model]\n",
     "pipeline_model = pipeline.fit(df)\n",
     "transformed_df = pipeline_model.transform(df)\n",
     "\n",
+    "# SPLIT DATA\n",
+    "\n",
+    "# Create Model\n",
+    "from pyspark.ml.regression import RandomForestRegressor\n",
+    "rf = RandomForestRegressor(featuresCol=\"features\", labelCol=\"SALESCLOSEPRICE\",\n",
+    "                    predictionCol=\"Prediction_Price\", seed=42 )\n",
+    "model = rf.fit(train_df) # Train model\n",
+    "predictions = model.transform(test_df)\n",
+    "model.save('rfr_model') # Save model\n",
+    "from pyspark.ml.regression import RandomForestRegressionModel\n",
+    "model2 = RandomForestRegressionModel.load('rfr_model') # Load the model\n",
+    "# Evaluate Model\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "evaluator = RegressionEvaluator(labelCol=\"SALESCLOSEPRICE\", predictionCol=\"Prediction_Price\")\n",
+    "rmse = evaluator.evaluate(predictions, {evaluator.metricName: \"rmse\"})\n",
+    "r2 = evaluator.evaluate(predictions, {evaluator.metricName: \"r2\"})\n",
+    "\n",
+    "# Feature importance\n",
+    "import pandas as pd\n",
+    "# Convert feature importances to a pandas column\n",
+    "importance_df = pd.DataFrame(model.featureImportances.toArray(), columns=['importance'])\n",
+    "importance_df['features'] = pd.Series(feature_cols) # Create a new column to hold feature names\n",
+    "importance_df.sort_values(by=['importance'], ascending=False, inplace=True) # Sort the data based on feature importance\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pyspark split data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "########### Splitting non-sequence data\n",
+    "train_df, test_df = df.randomSplit([0.8, 0.2], seed=42)\n",
+    "\n",
+    "########### Splitting sequence data with inherent sequence (eg : Time Series)\n",
+    "# Find how many days our data spans\n",
+    "from pyspark.sql.functions import datediff\n",
+    "range_in_days = datediff(max_date, min_date) # Find the no of days beteen minimum and maximum date\n",
+    "# Find the date to split the dataset on\n",
+    "from pyspark.sql.functions import date_add\n",
+    "split_in_days = round(range_in_days * 0.8) # Find 80% date split point\n",
+    "split_date = date_add(min_date, split_in_days) # Add split point with minimum date to get the split date\n",
+    "# Split the data into 80% train, 20% test\n",
+    "train_df = df.where(df['DATE'] < split_date) # Use filtering with split date to take only training data\n",
+    "test_df = df.where(df['DATE'] >= split_date) # Use filtering with split date to take only testing data\n",
     "```"
    ]
   }
