--- a/Python/Machine Learning with PySpark/takeaways.ipynb
+++ b/Python/Machine Learning with PySpark/takeaways.ipynb
@@ -54,7 +54,51 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# lowercase the strings in a column\n",
+    "df = df.select(lower(col('col_name'))) \n",
+    "# replace string or characters\n",
+    "df = df1.select(regexp_replace('col_name', 'old', 'new').alias('new_col'))\n",
+    "# Split a string on space\n",
+    "df = df.select(split('string_col', '[ ]').alias('word_list'))\n",
+    "# Split string using any given symbol\n",
+    "punctuation = \"_|.\\?\\!\\\",\\'\\[\\]\\*()\"\n",
+    "df = df.select(split('string_col', '[ %s]' % punctuation).alias('word_list'))\n",
+    "# Filter out empty strings from the resulting list\n",
+    "df = df.filter(col('word_list') != '')\n",
+    "# Explode the string list column so that each row contains one value of list\n",
+    "df = df.select(explode('word_list').alias('word'))\n",
+    "\n",
+    "### dealing with NLP related features\n",
+    "# replace unwanted characters\n",
+    "from pyspark.sql.functions import regexp_replace\n",
+    "REGEX = '[,\\\\-]'\n",
+    "df = df.withColumn('text', regexp_replace(df.text, REGEX, ' '))\n",
+    "# Tokenize words\n",
+    "from pyspark.ml.feature import Tokenizer\n",
+    "df = Tokenizer(inputCol=\"text\", outputCol=\"tokens\").transform(df)\n",
+    "from pyspark.ml.feature import StopWordsRemover\n",
+    "stopwords = StopWordsRemover(inputCol='tokens', outputCol='words')\n",
+    "stopwords.getStopWords() # Take a look at the list of stop words when stopwords = StopWordsRemover()\n",
+    "df = stopwords.transform(df)\n",
+    "# Hash the features\n",
+    "from pyspark.ml.feature import HashingTF\n",
+    "hasher = HashingTF(inputCol=\"words\", outputCol=\"hash\", numFeatures=32)\n",
+    "df = hasher.transform(df)\n",
+    "# Normalize the text features (TF-IDF)\n",
+    "from pyspark.ml.feature import IDF\n",
+    "df = IDF(inputCol=\"hash\", outputCol=\"features\").fit(df).transform(df)\n",
+    "\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
