Chapter 4 : Ensembles & Pipelines

--- a/Python/Machine Learning with PySpark/takeaways.ipynb
+++ b/Python/Machine Learning with PySpark/takeaways.ipynb
@@ -188,6 +188,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Machine Learning"
    ]
   },
@@ -221,8 +228,8 @@
     "# Create the parameter grid\n",
     "import pyspark.ml.tuning as tune\n",
     "paramGrid = tune.ParamGridBuilder()\\\n",
-    "        .addGrid(lr.regParam, np.arange(0, .1, .01))\n",
-    "        .addGrid(lr.elasticNetParam, [0, 1])\n",
+    "        .addGrid(lr_model.regParam, np.arange(0, .1, .01))\n",
+    "        .addGrid(lr_model.elasticNetParam, [0, 1])\n",
     "        .build()\n",
     "\n",
     "# Evaluation metric\n",
@@ -234,13 +241,15 @@
     "cv = CrossValidator(estimator=pipeline,\n",
     "                          estimatorParamMaps=paramGrid,\n",
     "                          evaluator=evaluator,\n",
-    "                          numFolds=3) \n",
+    "                          numFolds=3, seed = 42) \n",
     "\n",
     "# Split the data into training and test sets\n",
     "training, test = transformed_df.randomSplit([.6, .4])\n",
-    "\n",
+    "total_models = len(paramGrid)\n",
     "cvModel = cv.fit(training) # Fit the dataframe\n",
     "bestModel = cvModel.bestModel # Best model\n",
+    "bestModel.stages # See stages\n",
+    "bestModel.stages[3].extractParamMap() # See parameters in the model, model is on index 3 of pipeline\n",
     "bestParams = bestModel.stages[-1].extractParamMap() # See best parameters\n",
     "test_results = bestModel.transform(test) # Use the model to predict the test set\n",
     "predictions = cvModel.transform(test) # Predict using testing set\n",
